@@ -36,5 +36,6 @@ void add_crypto_tests(test_suite * suite);
 void add_string_queue_tests(test_suite * suite);
 void add_paths_tests(test_suite * suite);
 void add_roster_tests(test_suite * suite);
+void add_roster_merge_tests(test_suite * suite);
 
 #endif
